--- a/templates/javascripts.html
+++ b/templates/javascripts.html
@@ -35,6 +35,10 @@
 <script type="text/javascript" src="{% static 'javascripts/posts/controllers/posts.controller.js' %}"></script>
 <script type="text/javascript" src="{% static 'javascripts/posts/controllers/new-post.controller.js' %}"></script>
 
+<script type="text/javascript" src="{% static 'javascripts/profiles/profiles.module.js' %}"></script>
+<script type="text/javascript" src="{% static 'javascripts/profiles/services/profile.service.js' %}"></script>
+<script type="text/javascript" src="{% static 'javascripts/profiles/controllers/profile.controller.js' %}"></script>
+
 <script type="text/javascript" src="{% static 'javascripts/utils/utils.module.js' %}"></script>
 <script type="text/javascript" src="{% static 'javascripts/utils/services/snackbar.service.js' %}"></script>
 
